--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -31,7 +31,9 @@
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/editTextItem" />
+        android:id="@+id/editTextItem"
+        android:layout_alignRight="@+id/imageButton2"
+        android:layout_alignEnd="@+id/imageButton2" />
 
     <TextView
         android:text="Model Number"
@@ -83,15 +85,17 @@
         android:id="@+id/imageButton" />
 
     <EditText
+        android:id="@+id/editTextID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/editTextID"
-        android:layout_below="@+id/editTextSerial"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="18dp" />
+        android:layout_below="@+id/editTextSerial"
+        android:layout_marginTop="18dp"
+        android:editable="false"
+        android:ems="10"
+        android:inputType="textPersonName"
+        tools:editable="true" />
 
     <TextView
         android:text="ID Number"
@@ -103,10 +107,31 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="Create"
+        android:id="@+id/saveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/createButton"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="Save" />
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:layout_alignBottom="@+id/editTextModel"
+        android:layout_toRightOf="@+id/saveButton"
+        android:layout_toEndOf="@+id/saveButton"
+        android:layout_alignTop="@+id/editTextModel" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/imageButton2"
+        android:layout_alignStart="@+id/imageButton2"
+        android:layout_alignTop="@+id/editTextSerial"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:layout_above="@+id/editTextID" />
+
 </RelativeLayout>
