--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -32,8 +32,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/editTextItem"
-        android:layout_alignRight="@+id/imageButton2"
-        android:layout_alignEnd="@+id/imageButton2" />
+        android:layout_alignRight="@+id/imageButtonModel"
+        android:layout_alignEnd="@+id/imageButtonModel" />
 
     <TextView
         android:text="Model Number"
@@ -115,7 +115,7 @@
         android:text="Save" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/imageButtonModel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_input_add"
@@ -125,13 +125,13 @@
         android:layout_alignTop="@+id/editTextModel" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/imageButtonSerial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageButton2"
-        android:layout_alignStart="@+id/imageButton2"
+        android:layout_above="@+id/editTextID"
+        android:layout_alignLeft="@+id/imageButtonModel"
+        android:layout_alignStart="@+id/imageButtonModel"
         android:layout_alignTop="@+id/editTextSerial"
-        app:srcCompat="@android:drawable/ic_input_add"
-        android:layout_above="@+id/editTextID" />
+        app:srcCompat="@android:drawable/ic_input_add" />
 
 </RelativeLayout>
